src/features/Reviews/ui/ReviewsFormMovie/CommentList/style.module.scss
@use "@/app/styles/helpers" as *;

.comment-list-container {
	padding-top: var(--padding-20);
	padding-left: var(--padding-50);
	@include max-width(560) {
		padding-left: 0px;
	}
}

.comment-list {
	padding-block: var(--padding-20);
}

.open-comment-form-button {
	margin-left: auto;
}

.no-comments-label {
	padding-block: var(--padding-20);
	display: flex;
	align-items: center;
	justify-content: center;
}

.footer {
	margin-top: calc(var(--padding-20) * -1);
	display: flex;
	justify-content: center;
	align-items: center;
	column-gap: rem(5);
	color: var(--font-color-soft);
	opacity: 0;
	animation: fade 0.2s 0.5s forwards;
	&__divider {
		@include user-select-off;
	}
	&__pagination-button {
		margin-left: calc(var(--padding-50) * -1);
	}
	@include max-width(560) {
		margin-top: 0px;
		flex-direction: column;
		row-gap: rem(5);
		&__divider {
			display: none;
		}
		&__pagination-button {
			height: max-content;
			padding-block: 0px;
		}
		&__close-button {
			margin-bottom: var(--padding-20);
		}
	}
}

